Writup for Minabald

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,6 @@
     "Pathfinder-2E-SRD-Markdown-main/",
     "Templates/"
   ],
-  "defaultViewMode": "preview"
+  "defaultViewMode": "preview",
+  "promptDelete": false
 }
